05_service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  type: ClusterIP    # Тип сервиса
  ports:
    - port: 80       # Входяший порт сервиса 
      targetPort: 80 # Целевой порт у подов сервиса
  selector:
    app: my-app      # Выбор сервиса
