08_service_load_balancer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      name: my-app
  template:
    metadata:
      labels:
        name: my-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.13
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 2
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1




---
apiVersion: v1
kind: Service
metadata:
  name: my-service-load-balancer
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector: 
    app: my-app

# Service LoadBalancer Не имеет EXTERNAL-IP
 # Необходим Тунель
  # $ minikube tunnel
