09_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: foo.mydomen.com
    http:
      path:
      - backend:
        serviceName: foo
        servicePort: 8080
  - host: mydomain.com
    http:
      path:
      - backend:
        serviceName: bar
        servicePort: 8080
